--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ name: "ClapTrap"
 version: "2.2.0"
 slug: "claptrap"
 description: "Application de détection d'applaudissements en temps réel utilisant YAMNet, compatible avec les flux audio locaux et RTSP"
-url: "https://github.com/FDUBX/ClapTrap"
+url: "https://github.com/FDUBX/ClapTrap-HA-Addon-main"
 arch:
   - aarch64
   - amd64
